tests/NormalTests/paczka1/small_fuzzy/67899883.err
Error in line 2: HLVpkPxB4Hb S986 90,4
Error in line 3: HLVpkPxB4Hb S836 36,5
Error in line 11: LXmoM8uD8 A517 60,2
Error in line 14: LXmoM8uD8 S948 2,4
